; ModuleID = '/home/carl/AnghaBench/libgit2/tests/config/extr_stress.c_assert_config_value.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/config/extr_stress.c_assert_config_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@buf = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @assert_config_value(i32* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = call i32 @git_buf_clear(i32* @buf)
  %8 = load i32*, i32** %4, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = call i32 @git_config_get_string_buf(i32* @buf, i32* %8, i8* %9)
  %11 = call i32 @cl_git_pass(i32 %10)
  %12 = load i8*, i8** %6, align 8
  %13 = call i32 @git_buf_cstr(i32* @buf)
  %14 = call i32 @cl_assert_equal_s(i8* %12, i32 %13)
  ret void
}

declare dso_local i32 @git_buf_clear(i32*) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_config_get_string_buf(i32*, i32*, i8*) #1

declare dso_local i32 @cl_assert_equal_s(i8*, i32) #1

declare dso_local i32 @git_buf_cstr(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
